# Polybank_ATM

./: .gitignore  CMakeLists.txt  README.md  package-lock.json
app/: CMakeLists.txt  main.cc
cmake/: LTO.cmake
inc/ATM/: ATM.h  BadOperation.h  BankServices.h  CMakeLists.txt  CardCredentials.h  CardSlot.h  CashAcceptor.h  CashStorage.h  Dispenser.h  Frequency.h  Info.h  LeftOverOption.h  ReceiptPrinter.h  Session.h  State.h
src/: CMakeLists.txt
src/ATM/: ATM.cc  BadOperation.cc  BankServices.cc  CMakeLists.txt  CardSlot.cc  CashStorage.cc
tests/: CMakeLists.txt  main.cc
tests/TestBank/: CMakeLists.txt  TestBank.cc  TestBank.h
tests/unit_tests/: CMakeLists.txt  main.cc
ui/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
ui/src/: App.css  App.tsx  datepickerTheme.ts  index.css  theme.ts
ui/src/api/: AtmAPI.ts
ui/src/components/BankCard/: consts.ts  index.tsx
ui/src/components/Button/: BackButton.tsx  Button.tsx  const.ts
ui/src/components/Cash/: Cash.tsx  const.ts
ui/src/components/Dispenser/: InOutContainer.tsx
ui/src/components/Header/: index.tsx
ui/src/components/Input/: Input.tsx
ui/src/components/Modal/: index.tsx
ui/src/components/MultiPartInput/: CodeInput.tsx  InputPart.tsx
ui/src/pages/: AccountInfo.tsx  AddMoney.tsx  AutoTransfer.tsx  CardDispenser.tsx  CashOut.tsx  Credit.tsx  Deposit.tsx  LeftOvers.tsx  MainScreen.tsx  Pin.tsx  SuccessfulOperation.tsx  Transfer.tsx
ui/src/utils/: ProtectedRoute.tsx  format.ts  microQueue.ts  randomInRange.ts  withProps.tsx
(+10 files in other folders)
